--- a/pom.xml
+++ b/pom.xml
@@ -37,74 +37,78 @@
 
     <developers>
         <developer>
-            <id>mjunghanns</id>
+            <id>s1ck</id>
             <name>Martin Junghanns</name>
             <email>junghanns@informatik.uni-leipzig.de</email>
-            <timezone>+1</timezone>
             <organization>University of Leipzig</organization>
             <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
         </developer>
         <developer>
-            <id>apetermann</id>
+            <id>p3et</id>
             <name>Andre Petermann</name>
             <email>petermann@informatik.uni-leipzig.de</email>
-            <timezone>+1</timezone>
             <organization>University of Leipzig</organization>
             <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
         </developer>
         <developer>
-            <id>kgomez</id>
-            <name>Kevin Gomez</name>
-            <email>gomez@informatik.uni-leipzig.de</email>
-            <timezone>+1</timezone>
-            <organization>University of Leipzig</organization>
-            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
-        </developer>
-        <developer>
-            <id>nteichmann</id>
-            <name>Niklas Teichmann</name>
-            <email>teichmann@studserv.uni-leipzig.de</email>
-            <timezone>+1</timezone>
-            <organization>University of Leipzig</organization>
-            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
-        </developer>
-        <developer>
-            <id>skemper</id>
-            <name>Stephan Kemper</name>
-            <email>mai12byw@studserv.uni-leipzig.de</email>
-            <timezone>+1</timezone>
-            <organization>University of Leipzig</organization>
-            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
-        </developer>
-        <developer>
-            <id>sdienst</id>
-            <name>Steffen Dienst</name>
-            <timezone>+1</timezone>
-            <organization>University of Leipzig</organization>
-        </developer>
-        <developer>
-            <id>crost</id>
+            <id>ChrizZz110</id>
             <name>Christopher Rost</name>
             <email>rost@informatik.uni-leipzig.de</email>
-            <timezone>+1</timezone>
             <organization>University of Leipzig</organization>
             <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
         </developer>
         <developer>
-            <id>mkricke</id>
+            <id>galpha</id>
+            <name>Kevin Gomez</name>
+            <email>gomez@informatik.uni-leipzig.de</email>
+            <organization>University of Leipzig</organization>
+            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
+        </developer>
+        <developer>
+            <id>niklasteichmann</id>
+            <name>Niklas Teichmann</name>
+            <organization>University of Leipzig</organization>
+            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
+        </developer>
+        <developer>
+            <id>Venom590</id>
+            <name>Stephan Kemper</name>
+            <organization>University of Leipzig</organization>
+            <organizationUrl>http://dbs.uni-leipzig.de/en</organizationUrl>
+        </developer>
+        <developer>
+            <id>smee</id>
+            <name>Steffen Dienst</name>
+            <organization>University of Leipzig</organization>
+        </developer>
+        <developer>
+            <id>merando</id>
             <name>Matthias Kricke</name>
-            <timezone>+1</timezone>
+            <organization>University of Leipzig</organization>
+        </developer>
+        <developer>
+            <id>timo95</id>
+            <name>Timo Adameit</name>
+            <organization>University of Leipzig</organization>
+        </developer>
+        <developer>
+            <id>p-f</id>
+            <name>Philip Fritzsche</name>
+            <organization>Institut für Angewandte Informatik e. V.</organization>
+            <email>fritzsche@infai.org</email>
+        </developer>
+        <developer>
+            <id>boggledekoog</id>
+            <name>Julian Götz</name>
+            <organization>Institut für Angewandte Informatik e. V.</organization>
+            <email>goetz@infai.org</email>
+        </developer>
+        <developer>
+            <id>Rascat</id>
+            <name>Lucas Schons</name>
             <organization>University of Leipzig</organization>
         </developer>
     </developers>
-
-    <contributors>
-        <contributor>
-            <name>Philip Fritzsche</name>
-            <organization>University of Leipzig</organization>
-            <timezone>+1</timezone>
-        </contributor>
-    </contributors>
 
     <scm>
         <url>http://github.com/dbs-leipzig/gradoop.git</url>
