[#1270] * added capf example * added dimspan example

--- a/gradoop-examples/gradoop-examples-operators/pom.xml
+++ b/gradoop-examples/gradoop-examples-operators/pom.xml
@@ -67,15 +67,15 @@
                                     <!--<include>me.lemire.integercompression:*</include>-->
                                     <!--<include>commons-cli:*</include>-->
                                     <!-- CAPF Example Dependencies -->
-                                    <!--<include>org.opencypher:*</include>-->
-                                    <!--<include>org.apache.flink:flink-table_2.11</include>-->
-                                    <!--<include>org.parboiled:parboiled-scala_2.11</include>-->
-                                    <!--<include>com.lihaoyi:ujson_2.11</include>-->
-                                    <!--<include>com.lihaoyi:upickle_2.11</include>-->
-                                    <!--<include>org.typelevel:cats-kernel_2.11</include>-->
-                                    <!--<include>org.typelevel:cats-core_2.11</include>-->
-                                    <!--<include>org.atnos:eff_2.11</include>-->
-                                    <!--<include>org.parboiled:*</include>-->
+                                    <include>org.opencypher:*</include>
+                                    <include>org.apache.flink:flink-table_2.11</include>
+                                    <include>org.parboiled:parboiled-scala_2.11</include>
+                                    <include>com.lihaoyi:ujson_2.11</include>
+                                    <include>com.lihaoyi:upickle_2.11</include>
+                                    <include>org.typelevel:cats-kernel_2.11</include>
+                                    <include>org.typelevel:cats-core_2.11</include>
+                                    <include>org.atnos:eff_2.11</include>
+                                    <include>org.parboiled:*</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
