--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
         <!-- alpha order require -->
         <dep.accumulo.version>1.9.0</dep.accumulo.version>
         <dep.commons-cli.version>1.4</dep.commons-cli.version>
-        <dep.flink.version>1.7.2</dep.flink.version>
+        <dep.flink.version>1.8.0</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.4.3</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
@@ -599,7 +599,7 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-shaded-hadoop2</artifactId>
-                <version>${dep.flink.version}</version>
+                <version>2.8.3-1.8.0</version>
             </dependency>
 
             <!-- Accumulo -->
