--- a/pom.xml
+++ b/pom.xml
@@ -687,7 +687,7 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-shaded-hadoop2</artifactId>
-                <version>2.8.3-1.8.0</version>
+                <version>2.8.3-${dep.flink.version}</version>
             </dependency>
 
             <!-- Accumulo -->
