--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
         <dep.accumulo.version>1.9.0</dep.accumulo.version>
         <dep.commons-cli.version>1.4</dep.commons-cli.version>
         <dep.flink.version>1.8.1</dep.flink.version>
+        <dep.flink-shaded-hadoop2.version>2.6.5-1.8.1</dep.flink-shaded-hadoop2.version>
         <dep.gdl.version>0.3</dep.gdl.version>
         <dep.hbase.version>1.4.3</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
@@ -688,7 +689,7 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-shaded-hadoop2</artifactId>
-                <version>2.8.3-${dep.flink.version}</version>
+                <version>${dep.flink-shaded-hadoop2.version}</version>
             </dependency>
 
             <!-- Accumulo -->
