[#1190] Activate Javadoc checks

--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
                         <version>${plugin.maven-javadoc.version}</version>
                         <configuration>
                             <quiet>true</quiet>
-                            <doclint>none</doclint>
+                            <doclint>all</doclint>
                             <detectOfflineLinks>false</detectOfflineLinks>
                         </configuration>
                         <executions>
