[#1386] Replace hbase-server dependency.

--- a/gradoop-common/pom.xml
+++ b/gradoop-common/pom.xml
@@ -123,7 +123,7 @@
         <!-- HBase -->
         <dependency>
             <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-server</artifactId>
+            <artifactId>hbase-common</artifactId>
         </dependency>
 
         <!-- Flink -->
