--- a/pom.xml
+++ b/pom.xml
@@ -702,7 +702,12 @@
             <!-- HBase -->
             <dependency>
                 <groupId>org.apache.hbase</groupId>
-                <artifactId>hbase-server</artifactId>
+                <artifactId>hbase-client</artifactId>
+                <version>${dep.hbase.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hbase</groupId>
+                <artifactId>hbase-common</artifactId>
                 <version>${dep.hbase.version}</version>
             </dependency>
 
