[#1386] Use hbase-server for gradoop-hbase

--- a/gradoop-store/gradoop-hbase/pom.xml
+++ b/gradoop-store/gradoop-hbase/pom.xml
@@ -132,7 +132,7 @@
         <!-- HBase -->
         <dependency>
             <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
+            <artifactId>hbase-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
