--- a/pom.xml
+++ b/pom.xml
@@ -702,7 +702,7 @@
             <!-- HBase -->
             <dependency>
                 <groupId>org.apache.hbase</groupId>
-                <artifactId>hbase-client</artifactId>
+                <artifactId>hbase-server</artifactId>
                 <version>${dep.hbase.version}</version>
             </dependency>
             <dependency>
