[#1386] Replace hbase-server dependency. (#1388)
fixes #1386

--- a/pom.xml
+++ b/pom.xml
@@ -705,6 +705,11 @@
                 <artifactId>hbase-server</artifactId>
                 <version>${dep.hbase.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.hbase</groupId>
+                <artifactId>hbase-common</artifactId>
+                <version>${dep.hbase.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.hbase</groupId>
