--- a/gradoop-examples/gradoop-examples-operators/pom.xml
+++ b/gradoop-examples/gradoop-examples-operators/pom.xml
@@ -129,6 +129,7 @@
                                     <include>com.github.s1ck:gdl</include>
                                     <include>org.antlr:antlr4-runtime</include>
                                     <include>me.lemire.integercompression:*</include>
+                                    <include>com.google.guava:*</include>
                                     <!-- capf example dependencies -->
                                     <include>org.opencypher:*</include>
                                     <include>org.apache.flink:flink-table_2.11</include>
