--- a/gradoop-examples/gradoop-examples-operators/pom.xml
+++ b/gradoop-examples/gradoop-examples-operators/pom.xml
@@ -125,8 +125,10 @@
                                     <include>org.apache.flink:flink-gelly_2.11</include>
                                     <include>org.apache.flink:flink-java</include>
                                     <!-- others -->
+                                    <include>com.google.guava:*</include>
                                     <include>com.github.s1ck:gdl</include>
                                     <include>org.antlr:antlr4-runtime</include>
+                                    <!-- DIMSpan dependencies -->
                                     <include>me.lemire.integercompression:*</include>
                                     <!-- capf example dependencies -->
                                     <include>org.opencypher:*</include>
