--- a/pom.xml
+++ b/pom.xml
@@ -164,9 +164,10 @@
         <!-- alpha order require -->
         <dep.accumulo.version>1.9.0</dep.accumulo.version>
         <dep.commons-cli.version>1.4</dep.commons-cli.version>
+        <dep.commons-lang.version>2.6</dep.commons-lang.version>
         <dep.flink.version>1.7.2</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
-        <dep.hadoop.version>2.7.4</dep.hadoop.version>
+        <dep.guava.version>11.0.2</dep.guava.version>
         <dep.hbase.version>1.4.3</dep.hbase.version>
         <dep.javafastpfor.version>0.1.10</dep.javafastpfor.version>
         <dep.junit.version>4.12</dep.junit.version>
@@ -778,6 +779,24 @@
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>${dep.commons-cli.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${dep.commons-lang.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${dep.guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-annotations</artifactId>
+                <version>${plugin.maven-spotbugs.version}</version>
             </dependency>
 
             <!-- Test dependencies -->
